; ModuleID = '/home/carl/AnghaBench/FFmpeg/fftools/extr_ffplay.c_cmp_audio_fmts.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/fftools/extr_ffplay.c_cmp_audio_fmts.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32, i32)* @cmp_audio_fmts to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cmp_audio_fmts(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %10 = load i32, i32* %7, align 4
  %11 = icmp eq i32 %10, 1
  br i1 %11, label %12, label %22

12:                                               ; preds = %4
  %13 = load i32, i32* %9, align 4
  %14 = icmp eq i32 %13, 1
  br i1 %14, label %15, label %22

15:                                               ; preds = %12
  %16 = load i32, i32* %6, align 4
  %17 = call i64 @av_get_packed_sample_fmt(i32 %16)
  %18 = load i32, i32* %8, align 4
  %19 = call i64 @av_get_packed_sample_fmt(i32 %18)
  %20 = icmp ne i64 %17, %19
  %21 = zext i1 %20 to i32
  store i32 %21, i32* %5, align 4
  br label %33

22:                                               ; preds = %12, %4
  %23 = load i32, i32* %7, align 4
  %24 = load i32, i32* %9, align 4
  %25 = icmp ne i32 %23, %24
  br i1 %25, label %30, label %26

26:                                               ; preds = %22
  %27 = load i32, i32* %6, align 4
  %28 = load i32, i32* %8, align 4
  %29 = icmp ne i32 %27, %28
  br label %30

30:                                               ; preds = %26, %22
  %31 = phi i1 [ true, %22 ], [ %29, %26 ]
  %32 = zext i1 %31 to i32
  store i32 %32, i32* %5, align 4
  br label %33

33:                                               ; preds = %30, %15
  %34 = load i32, i32* %5, align 4
  ret i32 %34
}

declare dso_local i64 @av_get_packed_sample_fmt(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
